0.554 2026-01-18
  [New Features]
    * Add Sys::Time::Timespec#clone method.
    * Add Sys::Time::Timeval#clone method.
0.553 2025-12-22
  [New Features]
    * Add Sys::Process#setsid method.
0.552 2025-10-16
  [Bug Fix]
    * Fix Sys#_getdcwd bug.
    
0.551 2025-10-06
  [Bug Fix]
    * Fix a potential bug of Sys::User#getgroups method.
    
0.550 2025-08-12
  [New Features]
    * Add Sys::IO::Constant#O_ACCMODE method.
0.549 2025-08-12
  [New Features]
    * Add Sys::IO#dup method.
    * Add Sys::IO#dup2 method.
    
0.548 2025-08-12
  [Document Improvement]
    * Improve argument names of Sys#sysopen method.
  [New Features]
    * The first argument of Sys#umask method becomes an optional argument.
      This allows you to get the current umask value without setting.
    
      static method umask : int ($perms : int = -1);
    * If the permissions argument of Sys#sysopen method is omitted, it is set to 0666 & ~Sys->umask.
  [Incompatible Changes]
    * Remove FD_CLOEXEC flag from the file descriptors created by Sys#pipe method.
    * Remove FD_CLOEXEC flag from the file descriptors created by Sys#socketpair method.
    * Remove FD_CLOEXEC flag from the file descriptor created by Sys#popen method.
    * Add FD_CLOEXEC flag from the file descriptor created by Sys#sysopen method.
0.547 2025-08-11
  [Document Improvement]
    * Add Sys class links to the documents.
  [Exception Message Changes]
    * Use ' instead of " for quotes.
0.546 2025-06-02
  [New Features with Incompatibe Changes]
    * Sys->S returns a correct value in Windows.
  [Requirement Changes]
    * Require SPVM 0.990059.
  [Incompatible Changes]
    * Sys::IO::Constant#S_IFSOCK method returns a value.
    * Sys#O method throw an exception in Windows.
    * Sys#o method throw an exception in Windows.
    * The each following method throws an exception in Windows.
      Sys#O method
      Sys#g method
      Sys#k method
      Sys#o method 
      Sys#u method
      
0.545 2025-05-30
  [Bug Fix]