@@ -8,6 +8,8 @@ class Sys::Time::Timeval : pointer {
   
   native static method new : Sys::Time::Timeval ($tv_sec : long = 0, $tv_usec : long = 0);
   
+  native static method check : void ($tv_sec : long, $tv_usec : long);
+    
   native method DESTROY : void ();
   
   native method tv_sec : long ();
