@@ -245,7 +245,7 @@ class TestCase::Sys::Time::Util {
     {
       my $ts = Sys::Time::Timespec->new(2, 0);
       
-      my $ts_diff = Sys::Time::Timespec->new(-2, -1);
+      my $ts_diff = Sys::Time::Timespec->new(-3, 999_999_999);
       
       my $ts_add = Sys::Time::Util->add_timespec($ts, $ts_diff);
       
@@ -261,7 +261,7 @@ class TestCase::Sys::Time::Util {
     {
       my $ts = Sys::Time::Timespec->new(2, 1);
       
-      my $ts_diff = Sys::Time::Timespec->new(-2, -1);
+      my $ts_diff = Sys::Time::Timespec->new(-3, 999_999_999);
       
       my $ts_add = Sys::Time::Util->add_timespec($ts, $ts_diff);
       
@@ -314,7 +314,7 @@ class TestCase::Sys::Time::Util {
     {
       my $tv = Sys::Time::Timeval->new(2, 0);
       
-      my $tv_diff = Sys::Time::Timeval->new(-2, -1);
+      my $tv_diff = Sys::Time::Timeval->new(-3, 999_999);
       
       my $tv_add = Sys::Time::Util->add_timeval($tv, $tv_diff);
       
@@ -330,7 +330,7 @@ class TestCase::Sys::Time::Util {
     {
       my $tv = Sys::Time::Timeval->new(2, 1);
       
-      my $tv_diff = Sys::Time::Timeval->new(-2, -1);
+      my $tv_diff = Sys::Time::Timeval->new(-3, 999_999);
       
       my $tv_add = Sys::Time::Util->add_timeval($tv, $tv_diff);
       
@@ -383,7 +383,7 @@ class TestCase::Sys::Time::Util {
     {
       my $ts = Sys::Time::Timespec->new(-1, 999_999_999);
       
-      my $ts_diff = Sys::Time::Timespec->new(-2, -1);
+      my $ts_diff = Sys::Time::Timespec->new(-3, 999_999_999);
       
       my $ts_subtract = Sys::Time::Util->subtract_timespec($ts, $ts_diff);
       
@@ -399,7 +399,7 @@ class TestCase::Sys::Time::Util {
     {
       my $ts = Sys::Time::Timespec->new(0, 0);
       
-      my $ts_diff = Sys::Time::Timespec->new(-2, -1);
+      my $ts_diff = Sys::Time::Timespec->new(-3, 999_999_999);
       
       my $ts_subtract = Sys::Time::Util->subtract_timespec($ts, $ts_diff);
       
@@ -452,7 +452,7 @@ class TestCase::Sys::Time::Util {
     {
       my $ts = Sys::Time::Timeval->new(-1, 999_999);
       
-      my $ts_diff = Sys::Time::Timeval->new(-2, -1);
+      my $ts_diff = Sys::Time::Timeval->new(-3, 999_999);
       
       my $ts_subtract = Sys::Time::Util->subtract_timeval($ts, $ts_diff);
       
@@ -468,7 +468,7 @@ class TestCase::Sys::Time::Util {
     {
       my $ts = Sys::Time::Timeval->new(0, 0);
       
-      my $ts_diff = Sys::Time::Timeval->new(-2, -1);
+      my $ts_diff = Sys::Time::Timeval->new(-3, 999_999);
       
       my $ts_subtract = Sys::Time::Util->subtract_timeval($ts, $ts_diff);
       
